# Simplex

./: .LICENSE.readme.swp  .flake8  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.readme  Makefile  README.md  README.txt  buildmodfile.py  get_version.py  mayaConfigure.bat  meson.build  meson.options  pyBuild.bat  pyConfigure.bat  pyproject.toml  pythonConfigure.bat  quick_compile.bat  setup.py  simplex.mod  simplex_maya_installer.py  tox.ini  xsiConfigure.bat
.github/workflows/: main.yml
Maya2016.5/plug-ins/: simplex_maya.mll
Maya2016/plug-ins/: simplex_maya.mll
Maya2017/plug-ins/: simplex_maya.mll
SimplexCPP/: CMakeLists.txt  mayaConfigure.bat  pythonConfigure.bat  xsiConfigure.bat
SimplexCPP/include/: simplex.h  simplex_ice.h  simplex_mayaNode.h
SimplexCPP/include/rapidjson/: document.h
SimplexCPP/modules/: FindMaya.cmake
SimplexCPP/src/lib/: combo.cpp  combo.h  progression.cpp  progression.h  shape.cpp  shape.h  shapeController.cpp  shapeController.h  simplex.cpp  simplex.h  slider.h  stdafx.h  traversal.cpp  traversal.h  trispace.cpp  utils.cpp
SimplexCPP/src/maya/: simplex_mayaNode.cpp  simplex_mayaNode.h
SimplexCPP/src/python/: simplex_python.cpp
SimplexCPP/src/sip/: simplex.sip  stl.sip
SimplexCPP/src/xsi/: register.cpp  simplex_ice.cpp
SimplexUI/: __init__.py  channelBox.py  comboCheckDialog.py  constants.py  dragFilter.py  dummyInterface.py  falloffDialog.py  interface.py  interfaceItems.py  interfaceModel.py  interfaceModelTrees.py  interfaceModel_Test.py  loadUiType.py  mayaInterface.py  simplexDialog.py  simplexInterfaceDialog.py  simplexdialog.py  travCheckDialog.py  traversalDialog.py  trees.py  utils.py  xsiInterface.py
SimplexUI/commands/: __init__.py  alembicCommon.py  applyCorrectives.py  correctiveInterface.py  expandedExport.py  hdf5Convert.py  mayaCorrectiveInterface.py  mismatchedTransfer.py  reorderSimplexPoints.py  rigidAlign.py  simplexSplitter.py  smpxBlend.py  unsubdivide.py  uvTransfer.py  xsiCorrectiveInterface.py
SimplexUI/interface/: __init__.py  dummyInterface.py  mayaInterface.py  xsiInterface.py
SimplexUI/items/: accessor.py  combo.py  falloff.py  group.py  progression.py  shape.py  simplex.py  slider.py  traversal.py
SimplexUI/menu/: dummyTools.py
SimplexUI/tools/: dummyTools.py  mayaTools.py
SimplexUI/ui/: falloffDialog.ui  simplexInterfaceDialog.ui  simplexdialog.ui  travCheckDialog.ui  traversalDialog.ui
alllowercase/commands/: mayaCorrectiveInterface.py  mesh.py  unsubdivide.py  xsiCorrectiveInterface.py
alllowercase/items/: group.py
alllowercase/menu/: xsiTools.py
cmake/: FindMaya.cmake
meshcrawler/: meshcrawlerlib.py
modules/: FindMaya.cmake
scripts/: .flake8  MANIFEST.in  README.md  setup.py  simplexTour.txt
scripts/SimplexUI/: Qt.py  __init__.py  channelBox.py  comboCheckDialog.py  constants.py  dragFilter.py  dummyInterface.py  falloffDialog.py  interface.py  interfaceItems.py  interfaceModel.py  interfaceModelTrees.py  interfaceModel_Test.py  loadUiType.py  main.pyw  mayaInterface.py  plugInterface.py  simplexDialog.py  simplexInterfaceDialog.py  simplexdialog.py  todo.txt  travCheckDialog.py  traversalDialog.py  utils.py  xsiInterface.py
scripts/alllowercase/: __meta__.xml  falloffDialog.py  interfaceModelTrees.py
scripts/mayaInstaller/: README.txt  simplexMayaInstall.py
scripts/meshcrawler/: bagel.py
scripts/simplexui/: __init__.py  comboCheckDialog.py  dragFilter.py  falloffDialog.py  interfaceModel_Test.py  simplexDialog.py  travCheckDialog.py  (+2 more)
simplexui/: Qt.py  __init__.py  __meta__.xml  channelBox.py  comboCheckDialog.py  dragFilter.py  falloffDialog.py  interfaceModel.py  interfaceModelTrees.py  interfaceModel_Test.py  main.pyw  simplexDialog.py  stylesheets.py  travCheckDialog.py  traversalDialog.py  utils.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  combo.cpp  enums.h  progression.cpp  progression.h  shape.cpp  shapeBase.h  shapeController.cpp  shapeController.h  simplex.cpp  simplex.h  slider.cpp  stdafx.cpp  traversal.cpp  traversal.h  trispace.cpp  trispace.h  utils.h
src/maya/: CMakeLists.txt  basicBlendShape.cpp  meson.build  pluginMain.cpp  simplex_mayaNode.cpp  simplex_mayaNode.h
src/maya/include/: basicBlendShape.h
src/maya/src/: pluginMain.cpp  simplex_mayaNode.cpp  version.h.in
src/python/: CMakeLists.txt  meson.build  pysimplex.cpp  simplex_python.cpp
src/python/simplexui/: __init__.py  _version.py.in  channelBox.py  comboCheckDialog.py  dragFilter.py  falloffDialog.py  interfaceModel.py  interfaceModelTrees.py  interfaceModel_Test.py  meson.build  simplexDialog.py  travCheckDialog.py  traversalDialog.py  utils.py
src/python/simplexui/commands/: alembicCommon.py  applyCorrectives.py  correctiveInterface.py  expandedExport.py  hdf5Convert.py  mayaCorrectiveInterface.py  mayatonumpy.py  mesh.py  numpytoimath.py  poseblendlib.py  reorderSimplexPoints.py  rigidAlign.py  smpxBlend.py  unsubdivide.py  uvTransfer.py  xsiCorrectiveInterface.py
src/python/simplexui/interface/: __init__.py  dummyInterface.py  mayaInterface.py  xsiInterface.py
src/python/simplexui/items/: __init__.py  accessor.py  combo.py  falloff.py  group.py  progression.py  shape.py  simplex.py  slider.py  stack.py  traversal.py
src/python/simplexui/menu/: __init__.py
src/python/simplexui/menu/genericPlugins/: _builtins.py  checkPossibleCombos.py  exportSplit.py  simplexUvTransfer.py  unsubdivide.py
src/python/simplexui/menu/mayaPlugins/: exportOther.py  extractProgressives.py  freezeCombo.py  generateShapeIncrementals.py  importObjs.py  linearizeTraversal.py  makeShelfBtn.py  relaxToSelection.py  reloadDefinition.py  snapToNeutral.py  softSelectToCluster.py  tweakMix.py  updateRestShape.py
src/simplexlib/: meson.build
src/simplexlib/include/: combo.h  floater.h  shape.h  slider.h  utils.h
src/simplexlib/src/: combo.cpp  progression.cpp  shape.cpp  shapeController.cpp  simplex.cpp  traversal.cpp  utils.cpp
src/sip/: simplex_lib.sip
src/xsi/: simplex_ice.cpp  simplex_ice.h
subprojects/: rapidjson.wrap
subprojects/maya/: meson.build  meson.options
(+229 files in other folders)
