[project]
name = "simplex-solver"
dynamic = [
    "version"
]

authors = [
  { name="Tyler Fox", email="tyler@blur.com" },
]
description = "The Blur Studio Simplex Blendshape Combination System"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    "six",
    "Qt.py",
]

[project.urls]
"Project Page" = "https://github.com/blurstudio/simplex"

[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "meson >= 1.6.0",
]

[tool.meson-python.args]
setup = ['-Dmaya_build=false', '-Dpython_build=true']
install = ['--skip-subprojects']

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "*.egg-info",
    "*.pyc",
    ".bzr",
    ".cache",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "shared-venv",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "N",
    "W",
    "B9",
]
ignore = [
    "B905",
    "C901",
    "E203",
    "E501",
    "E722",
    "N802",
    "N803",
    "N804",
    "N806",
    "N815",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

