
py.install_sources(
  '__init__.py',
  'channelBox.py',
  'comboCheckDialog.py',
  'dragFilter.py',
  'falloffDialog.py',
  'interfaceModel.py',
  'interfaceModelTrees.py',
  'main.pyw',
  'simplexDialog.py',
  'travCheckDialog.py',
  'traversalDialog.py',
  'utils.py',
  'commands/__init__.py',
  'commands/alembicCommon.py',
  'commands/applyCorrectives.py',
  'commands/correctiveInterface.py',
  'commands/expandedExport.py',
  'commands/hdf5Convert.py',
  'commands/mayaCorrectiveInterface.py',
  'commands/mayatonumpy.py',
  'commands/mesh.py',
  'commands/numpytoimath.py',
  'commands/poseblendlib.py',
  'commands/reorderSimplexPoints.py',
  'commands/rigidAlign.py',
  'commands/smpxBlend.py',
  'commands/unsubdivide.py',
  'commands/uvTransfer.py',
  'img/ChefHead.png',
  'img/frozen.png',
  'interface/__init__.py',
  'interface/dummyInterface.py',
  'interface/mayaInterface.py',
  'items/__init__.py',
  'items/accessor.py',
  'items/combo.py',
  'items/falloff.py',
  'items/group.py',
  'items/progression.py',
  'items/shape.py',
  'items/simplex.py',
  'items/slider.py',
  'items/stack.py',
  'items/traversal.py',
  'menu/__init__.py',
  'menu/dummyPlugins/__init__.py',
  'menu/genericPlugins/__init__.py',
  'menu/genericPlugins/_builtins.py',
  'menu/genericPlugins/checkPossibleCombos.py',
  'menu/genericPlugins/exportSplit.py',
  'menu/genericPlugins/showFalloffs.py',
  'menu/genericPlugins/showTraversals.py',
  'menu/genericPlugins/simplexUvTransfer.py',
  'menu/genericPlugins/unsubdivide.py',
  'menu/mayaPlugins/__init__.py',
  'menu/mayaPlugins/exportOther.py',
  'menu/mayaPlugins/extractProgressives.py',
  'menu/mayaPlugins/freezeCombo.py',
  'menu/mayaPlugins/generateShapeIncrementals.py',
  'menu/mayaPlugins/importObjs.py',
  'menu/mayaPlugins/linearizeTraversal.py',
  'menu/mayaPlugins/makeShelfBtn.py',
  'menu/mayaPlugins/relaxToSelection.py',
  'menu/mayaPlugins/reloadDefinition.py',
  'menu/mayaPlugins/snapToNeutral.py',
  'menu/mayaPlugins/softSelectToCluster.py',
  'menu/mayaPlugins/tweakMix.py',
  'menu/mayaPlugins/updateRestShape.py',
  'ui/comboCheckDialog.ui',
  'ui/falloffDialog.ui',
  'ui/simplexDialog.ui',
  'ui/travCheckDialog.ui',
  'ui/traversalDialog.ui',

  subdir : 'simplexui',
  preserve_path: true,
)


